Use EPS format for figures where possible

--- a/code/notebooks/lotka_volterra/Comparison.ipynb
+++ b/code/notebooks/lotka_volterra/Comparison.ipynb
@@ -109,7 +109,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-4214b16e-6e9a-11ef-9f6f-94de80e86035</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-a75f2d4e-6e9c-11ef-b27e-94de80e86035</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -140,7 +140,7 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">LocalCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">f1127d1d</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">43f8c800</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
@@ -177,11 +177,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-000fcb54-ad98-4172-ac86-6c483ab660f3</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-0701fec2-8bc2-44ed-9d78-b14f8efbffca</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://127.0.0.1:41255\n",
+       "                        <strong>Comm:</strong> tcp://127.0.0.1:45591\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 4\n",
@@ -223,7 +223,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:33285\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:45433\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -231,7 +231,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:34233/status\" target=\"_blank\">http://127.0.0.1:34233/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:35113/status\" target=\"_blank\">http://127.0.0.1:35113/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -239,13 +239,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:34573\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:44569\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-j93c18xb\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-6g4e_p7z\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -268,7 +268,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:41981\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:45453\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -276,7 +276,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:36413/status\" target=\"_blank\">http://127.0.0.1:36413/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:39447/status\" target=\"_blank\">http://127.0.0.1:39447/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -284,13 +284,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:44203\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:38217\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-h48mezpu\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-fo9_qqmb\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -313,7 +313,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:43257\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:41761\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -321,7 +321,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:46297/status\" target=\"_blank\">http://127.0.0.1:46297/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:36881/status\" target=\"_blank\">http://127.0.0.1:36881/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -329,13 +329,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:38335\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:37697\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-pya4t3t4\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-zv_obghe\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -358,7 +358,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:42283\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:39945\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -366,7 +366,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:46127/status\" target=\"_blank\">http://127.0.0.1:46127/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:46473/status\" target=\"_blank\">http://127.0.0.1:46473/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -374,13 +374,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:43503\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:33701\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-w8u94me0\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-aevh00bl\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -407,7 +407,7 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://127.0.0.1:41255' processes=4 threads=16, memory=7.45 GiB>"
+       "<Client: 'tcp://127.0.0.1:45591' processes=4 threads=16, memory=7.45 GiB>"
       ]
      },
      "execution_count": 6,
@@ -759,15 +759,16 @@
       "DEBUG:utils.caching:Reading from disk cache: rw_energy_distance_4_rw_st_log_idx\n",
       "DEBUG:utils.caching:Reading /home/artem/Study/KCL/ST50 Project/data/generated/rw_energy_distance_4_rw_st_log_idx.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_energy_distance_naive_4\n",
-      "DEBUG:utils.caching:Reading /home/artem/Study/KCL/ST50 Project/data/generated/rw_energy_distance_naive_4.npy\n"
+      "DEBUG:utils.caching:Reading /home/artem/Study/KCL/ST50 Project/data/generated/rw_energy_distance_naive_4.npy\n",
+      "WARNING:matplotlib.backends.backend_ps:The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.94 s, sys: 486 ms, total: 3.42 s\n",
-      "Wall time: 3.2 s\n"
+      "CPU times: user 2.93 s, sys: 391 ms, total: 3.32 s\n",
+      "Wall time: 3.07 s\n"
      ]
     },
     {
@@ -784,7 +785,7 @@
    "source": [
     "%%time\n",
     "fig = plot_comparison(get_indices, indices1, y_label='Energy distance')\n",
-    "fig.savefig(FIGURES_PATH / 'lotka-volterra-stein-thinning-energy-distance.pdf');"
+    "fig.savefig(FIGURES_PATH / 'lotka-volterra-stein-thinning-energy-distance.eps');"
    ]
   },
   {
@@ -875,15 +876,16 @@
       "DEBUG:utils.caching:Reading from disk cache: rw_ksd_4_rw_st_log_idx\n",
       "DEBUG:utils.caching:Reading /home/artem/Study/KCL/ST50 Project/data/generated/rw_ksd_4_rw_st_log_idx.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_ksd_naive_4\n",
-      "DEBUG:utils.caching:Reading /home/artem/Study/KCL/ST50 Project/data/generated/rw_ksd_naive_4.npy\n"
+      "DEBUG:utils.caching:Reading /home/artem/Study/KCL/ST50 Project/data/generated/rw_ksd_naive_4.npy\n",
+      "WARNING:matplotlib.backends.backend_ps:The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.66 s, sys: 525 ms, total: 4.19 s\n",
-      "Wall time: 4.06 s\n"
+      "CPU times: user 3.42 s, sys: 635 ms, total: 4.06 s\n",
+      "Wall time: 3.55 s\n"
      ]
     },
     {
@@ -900,7 +902,7 @@
    "source": [
     "%%time\n",
     "fig = plot_comparison(get_indices_ksd, indices1, y_label='Kernel Stein discrepancy', y_scale='log')\n",
-    "fig.savefig(FIGURES_PATH / 'lotka-volterra-stein-thinning-ksd.pdf');"
+    "fig.savefig(FIGURES_PATH / 'lotka-volterra-stein-thinning-ksd.eps');"
    ]
   },
   {
@@ -939,15 +941,16 @@
       "DEBUG:utils.caching:Reading from disk cache: rw_energy_distance_3_rw_gf_simple_gaussian_idx\n",
       "DEBUG:utils.caching:Reading /home/artem/Study/KCL/ST50 Project/data/generated/rw_energy_distance_3_rw_gf_simple_gaussian_idx.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_energy_distance_4_rw_gf_simple_gaussian_idx\n",
-      "DEBUG:utils.caching:Reading /home/artem/Study/KCL/ST50 Project/data/generated/rw_energy_distance_4_rw_gf_simple_gaussian_idx.npy\n"
+      "DEBUG:utils.caching:Reading /home/artem/Study/KCL/ST50 Project/data/generated/rw_energy_distance_4_rw_gf_simple_gaussian_idx.npy\n",
+      "WARNING:matplotlib.backends.backend_ps:The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.34 s, sys: 372 ms, total: 2.71 s\n",
-      "Wall time: 2.59 s\n"
+      "CPU times: user 2.39 s, sys: 440 ms, total: 2.83 s\n",
+      "Wall time: 2.35 s\n"
      ]
     },
     {
@@ -964,7 +967,7 @@
    "source": [
     "%%time\n",
     "fig = plot_comparison(get_indices, indices2, y_label='Energy distance')\n",
-    "fig.savefig(FIGURES_PATH / 'lotka-volterra-gf-thinning-energy-distance.pdf');"
+    "fig.savefig(FIGURES_PATH / 'lotka-volterra-gf-thinning-energy-distance.eps');"
    ]
   },
   {
@@ -986,15 +989,16 @@
       "DEBUG:utils.caching:Reading from disk cache: rw_ksd_3_rw_gf_simple_gaussian_idx\n",
       "DEBUG:utils.caching:Reading /home/artem/Study/KCL/ST50 Project/data/generated/rw_ksd_3_rw_gf_simple_gaussian_idx.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_ksd_4_rw_gf_simple_gaussian_idx\n",
-      "DEBUG:utils.caching:Reading /home/artem/Study/KCL/ST50 Project/data/generated/rw_ksd_4_rw_gf_simple_gaussian_idx.npy\n"
+      "DEBUG:utils.caching:Reading /home/artem/Study/KCL/ST50 Project/data/generated/rw_ksd_4_rw_gf_simple_gaussian_idx.npy\n",
+      "WARNING:matplotlib.backends.backend_ps:The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.84 s, sys: 505 ms, total: 4.34 s\n",
-      "Wall time: 3.89 s\n"
+      "CPU times: user 3.68 s, sys: 596 ms, total: 4.27 s\n",
+      "Wall time: 3.76 s\n"
      ]
     },
     {
@@ -1011,7 +1015,7 @@
    "source": [
     "%%time\n",
     "fig = plot_comparison(get_indices_ksd, indices2, y_label='Kernel Stein discrepancy', y_scale='log')\n",
-    "fig.savefig(FIGURES_PATH / 'lotka-volterra-gf-thinning-ksd.pdf');"
+    "fig.savefig(FIGURES_PATH / 'lotka-volterra-gf-thinning-ksd.eps');"
    ]
   },
   {
@@ -1031,7 +1035,7 @@
     {
      "data": {
       "text/plain": [
-       "48.767372369766235"
+       "47.565152645111084"
       ]
      },
      "execution_count": 36,
