--- a/report/main.tex
+++ b/report/main.tex
@@ -536,7 +536,7 @@ especially for the diagonal elements
 \begin{figure}[h]
 \centering
 \makebox[\textwidth][c]{
-	\includegraphics[width=1.0\textwidth]{gaussian-mixture-laplace-proxy.pdf}
+	\includegraphics[width=1.0\textwidth]{gaussian-mixture-laplace-proxy.eps}
 }
 \caption{The values of $\log_{10} q(x) - \log_{10} p(x)$ for the points in the Gaussian mixture sample under (a)~the Laplace approximation and (b)~the simple Gaussian using the sample mean and covariance.
 \label{fig:gmm:laplace-failure}}
@@ -545,7 +545,7 @@ especially for the diagonal elements
 \begin{figure}[h]
 \centering
 \makebox[\textwidth][c]{
-	\includegraphics[width=0.5\textwidth]{gaussian-mixture-kQ-hist.pdf}
+	\includegraphics[width=0.5\textwidth]{gaussian-mixture-kQ-hist.eps}
 }
 \caption{Histogram of values $|k_Q(x_i, x_j)|$ for the bivariate Gaussian mixture using the Laplace approximation.
 \label{fig:gmm:kQ:hist}}
@@ -556,7 +556,7 @@ Finally, \Cref{fig:gmm:comparison} compares the energy distance achieved by thin
 \begin{figure}[h]
 \centering
 \makebox[\textwidth][c]{
-	\includegraphics[width=1.0\textwidth]{gaussian-mixture-comparison.pdf}
+	\includegraphics[width=1.0\textwidth]{gaussian-mixture-comparison.eps}
 }
 \caption{Comparison between thinning approaches for the bivariate Gaussian mixture sample.
 \label{fig:gmm:comparison}}
@@ -592,7 +592,7 @@ We take $u(t;\theta^*)$ to be generated for $t \in [0, 25]$ by the model~(\ref{e
 \begin{figure}[h]
 \centering
 \makebox[\textwidth][c]{
-	\includegraphics[width=1.0\textwidth]{lotka-volterra.pdf}
+	\includegraphics[width=1.0\textwidth]{lotka-volterra.eps}
 }
 \caption{Solution to the Lotka-Volterra ODEs (black) with added Gaussian noise (grey).
 \label{fig:lotka-volterra:data}}
@@ -703,7 +703,7 @@ Comparing the performance of Stein thinning against na\"ive thinning (\Cref{fig:
 \begin{figure}[h]
 \centering
 \makebox[\textwidth][c]{
-	\includegraphics[width=1.0\textwidth]{lotka-volterra-stein-thinning-energy-distance.pdf}
+	\includegraphics[width=1.0\textwidth]{lotka-volterra-stein-thinning-energy-distance.eps}
 }
 \caption{Energy distance comparison between Stein thinning (in linear and logarithmic space) and na\"ive thinning for MCMC chains in the Lotka-Volterra inverse problem.
 \label{fig:lotka-volterra:stein-thinning:energy-distance}}
@@ -718,7 +718,7 @@ As in the case of the Gaussian mixture, the Laplace approximation fails to produ
 \begin{figure}[h]
 \centering
 \makebox[\textwidth][c]{
-	\includegraphics[width=1.0\textwidth]{lotka-volterra-gf-thinning-energy-distance.pdf}
+	\includegraphics[width=1.0\textwidth]{lotka-volterra-gf-thinning-energy-distance.eps}
 }
 \caption{Energy distance comparison between gradient-free and standard Stein thinning for the Lotka-Volterra inverse problem.
 \label{fig:lotka-volterra:gf-thinning:energy-distance}}
@@ -729,7 +729,7 @@ It is perhaps surprising that gradient-free thinning, being an approximation, ac
 \begin{figure}[h]
 \centering
 \makebox[\textwidth][c]{
-	\includegraphics[width=1.0\textwidth]{lotka-volterra-gf-thinning-ksd.pdf}
+	\includegraphics[width=1.0\textwidth]{lotka-volterra-gf-thinning-ksd.eps}
 }
 \caption{Kernel Stein discrepancy comparison between gradient-free and standard Stein thinning for the Lotka-Volterra inverse problem.
 \label{fig:lotka-volterra:gf-thinning:ksd}}
@@ -887,7 +887,7 @@ where $\pi(1)$ is the index of the element selected on the first iteration. The 
 \begin{figure}[h]
 \centering
 \makebox[\textwidth][c]{
-	\includegraphics[width=1.0\textwidth]{gaussian-mixture-laplace-first-iterations.pdf}
+	\includegraphics[width=1.0\textwidth]{gaussian-mixture-laplace-first-iterations.eps}
 }
 \caption{Values used in the first two optimisation steps of the Stein thinning algorithm for the bivariate Gaussian mixture with the auxiliary distribution based on the Laplace approximation. The values are shown in the $\log_{10}$ scale. The element selected by the optimisation in both cases is circled.
 \label{fig:gmm:laplace:first-iterations}}
@@ -896,7 +896,7 @@ where $\pi(1)$ is the index of the element selected on the first iteration. The 
 \begin{figure}[h]
 \centering
 \makebox[\textwidth][c]{
-	\includegraphics[width=1.0\textwidth]{lotka-volterra-trace-plots.pdf}
+	\includegraphics[width=1.0\textwidth]{lotka-volterra-trace-plots.eps}
 }
 \caption{Trace plots from the random-walk Metropolis-Hastings algorithm for the Lotka-Volterra inverse problem.
 \label{fig:lotka-volterra:trace-plots}}
