Move requirements to pyproject.toml

--- a/code/notebooks/examples/Dask_AWS.ipynb
+++ b/code/notebooks/examples/Dask_AWS.ipynb
@@ -5,7 +5,9 @@
    "id": "5909e87c-75c9-4923-8d3f-51c9810becd3",
    "metadata": {},
    "source": [
-    "This notebook demonstrates parallelising the calculation of gradients across CPU cores of a single machine as well as AWS using the popular ``Dask`` package."
+    "This notebook demonstrates parallelising the calculation of gradients across CPU cores of a single machine as well as AWS using the popular ``Dask`` package.\n",
+    "\n",
+    "In order to run this notebook, you need to install version 3.7.0 of PyStan, since later versions are not currently available on `conda-forge`, so cannot be used on the Coiled platform. Version 3.7.0 of PyStan is compatible with Python versions 3.8-3.11."
    ]
   },
   {
@@ -989,7 +991,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
