Fix issue in reference for Riabiz et al. (2022)

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -553,7 +553,7 @@
 
 @article{riabizOptimalThinningMCMC2022,
   title = {Optimal {{Thinning}} of {{MCMC Output}}},
-  author = {Riabiz, Marina and Chen, Wilson Ye and Cockayne, Jon and Swietach, Pawel and Niederer, Steven A. and Mackey, Lester and Oates, {\relax Chris}. J.},
+  author = {Riabiz, Marina and Chen, Wilson Ye and Cockayne, Jon and Swietach, Pawel and Niederer, Steven A. and Mackey, Lester and Oates, Chris J.},
   year = {2022},
   month = sep,
   journal = {Journal of the Royal Statistical Society Series B: Statistical Methodology},
